[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/roboto_bold_12.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ui/toggles/InfoToggle.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/panels/MinionInfo.tscn" type="PackedScene" id=3]

[node name="InfoToggle" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elements" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 307.0
margin_bottom = 164.0

[node name="MinionInfo" parent="Elements" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 300.0

[node name="InfoButton" type="Button" parent="Elements"]
margin_top = 136.0
margin_right = 300.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "+ Info"

[connection signal="toggled" from="Elements/InfoButton" to="." method="_on_info_button_toggled"]
